# inline_compression_paper_artifacts_pasc_2026

./: CITATION.cff  LICENSE  README.md
BSL6D/: README
BSL6D/accuracy-evaluation/: bsl6dConfig.json
GENE/: README.md
GENE/accuracy-evaluation/: parameters_baseline_upstream  parameters_compressed_runs
GENE/accuracy-evaluation/output_baseline/: GENE.18616954.out
GENE/accuracy-evaluation/output_fr_16/: GENE.18595233.out
GENE/accuracy-evaluation/output_fr_2/: GENE.21727225.out
GENE/accuracy-evaluation/output_fr_32/: GENE.18595232.out
GENE/accuracy-evaluation/output_fr_4/: GENE.18595241.out
GENE/accuracy-evaluation/output_fr_8/: GENE.18595234.out
GENE/performance-evaluation/output_baseline_mpi/: parameters
GENE/performance-evaluation/output_baseline_mpi/ht_out/: perfout.00000.txt  perfout.00001.txt  perfout.00002.txt  perfout.00003.txt  perfout.00004.txt  perfout.00005.txt  perfout.00006.txt  perfout.00007.txt  perfout.00008.txt  perfout.00009.txt  perfout.00010.txt  perfout.00011.txt  perfout.00012.txt  perfout.00013.txt  perfout.00014.txt  perfout.00015.txt  perfout.00016.txt  perfout.00017.txt  perfout.00018.txt  perfout.00019.txt  perfout.00020.txt  perfout.00021.txt  perfout.00022.txt  perfout.00023.txt  perfout.00024.txt  perfout.00025.txt  perfout.00026.txt  perfout.00027.txt  perfout.00028.txt  perfout.00029.txt  perfout.00030.txt  perfout.00031.txt
GENE/performance-evaluation/output_baseline_nccl/: parameters
GENE/performance-evaluation/output_baseline_nccl/ht_out/: perfout.00000.txt  perfout.00001.txt  perfout.00002.txt  perfout.00003.txt  perfout.00004.txt  perfout.00005.txt  perfout.00006.txt  perfout.00007.txt  perfout.00008.txt  perfout.00009.txt  perfout.00010.txt  perfout.00011.txt  perfout.00012.txt  perfout.00013.txt  perfout.00014.txt  perfout.00015.txt  perfout.00016.txt  perfout.00017.txt  perfout.00018.txt  perfout.00019.txt  perfout.00020.txt  perfout.00021.txt  perfout.00022.txt  perfout.00023.txt  perfout.00024.txt  perfout.00025.txt  perfout.00026.txt  perfout.00027.txt  perfout.00028.txt  perfout.00029.txt  perfout.00030.txt  perfout.00031.txt
GENE/performance-evaluation/output_fr_16/partitions_1/ht_out/: perfout.00000.txt  perfout.00001.txt  perfout.00002.txt  perfout.00003.txt  perfout.00004.txt  perfout.00005.txt  perfout.00006.txt  perfout.00007.txt  perfout.00008.txt  perfout.00009.txt  perfout.00010.txt  perfout.00011.txt  perfout.00012.txt  perfout.00013.txt  perfout.00014.txt  perfout.00015.txt  perfout.00016.txt  perfout.00017.txt  perfout.00018.txt  perfout.00019.txt  perfout.00020.txt  perfout.00021.txt  perfout.00022.txt  perfout.00023.txt  perfout.00024.txt  perfout.00025.txt  perfout.00026.txt  perfout.00027.txt  perfout.00028.txt  perfout.00029.txt  perfout.00030.txt  perfout.00031.txt
GENE/performance-evaluation/output_fr_16/partitions_2/ht_out/: perfout.00000.txt  perfout.00001.txt  perfout.00002.txt  perfout.00003.txt  perfout.00004.txt  perfout.00005.txt  perfout.00006.txt  perfout.00007.txt  perfout.00008.txt  perfout.00009.txt  (+22 more)
GENE/performance-evaluation/output_fr_2/partitions_1/: parameters
GENE/src/: compression_code_changes.txt  zfp_compression_multi_stream.h
compressor_evaluation/: CMakeLists.txt  README.md
compressor_evaluation/data/: CUSZP_BENCHMARK_3D_EB_0.001.22927234.csv  CUSZP_BENCHMARK_3D_EB_0.001.22927234.err  CUSZP_BENCHMARK_3D_EB_0.001.22927234.out  CUSZP_BENCHMARK_3D_EB_0.01.22927235.csv  CUSZP_BENCHMARK_3D_EB_0.01.22927235.err  CUSZP_BENCHMARK_3D_EB_0.01.22927235.out  CUSZP_BENCHMARK_3D_EB_0_00.00000001.22927232.csv  CUSZP_BENCHMARK_3D_EB_0_00.00000001.22927232.err  CUSZP_BENCHMARK_3D_EB_0_00.00000001.22927232.out  CUSZP_BENCHMARK_3D_EB_0_00001.22927233.csv  CUSZP_BENCHMARK_3D_EB_0_00001.22927233.err  CUSZP_BENCHMARK_3D_EB_0_00001.22927233.out  MGARD_BENCHMARK_3D_EB_0.001.22927238.csv  MGARD_BENCHMARK_3D_EB_0.001.22927238.err  MGARD_BENCHMARK_3D_EB_0.001.22927238.out  MGARD_BENCHMARK_3D_EB_0.01.22927239.csv  MGARD_BENCHMARK_3D_EB_0.01.22927239.err  MGARD_BENCHMARK_3D_EB_0.01.22927239.out  MGARD_BENCHMARK_3D_EB_0_00.00000001.22927236.csv  MGARD_BENCHMARK_3D_EB_0_00.00000001.22927236.err  MGARD_BENCHMARK_3D_EB_0_00.00000001.22927236.out  MGARD_BENCHMARK_3D_EB_0_00001.22927237.csv  MGARD_BENCHMARK_3D_EB_0_00001.22927237.err  MGARD_BENCHMARK_3D_EB_0_00001.22927237.out  ZFP_BENCHMARK_3D_FR_16.22927249.csv  ZFP_BENCHMARK_3D_FR_16.22927249.err  ZFP_BENCHMARK_3D_FR_16.22927249.out  ZFP_BENCHMARK_3D_FR_32.22927250.csv  ZFP_BENCHMARK_3D_FR_32.22927250.err  ZFP_BENCHMARK_3D_FR_32.22927250.out  ZFP_BENCHMARK_3D_FR_4.22927251.csv  ZFP_BENCHMARK_3D_FR_4.22927251.err  ZFP_BENCHMARK_3D_FR_4.22927251.out  ZFP_BENCHMARK_3D_FR_8.22927252.csv  ZFP_BENCHMARK_3D_FR_8.22927252.err  ZFP_BENCHMARK_3D_FR_8.22927252.out  cuszp_benchmark_3d_compression_default_stream_eb_0_00000001.slurm  cuszp_benchmark_3d_compression_default_stream_eb_0_00001.slurm  cuszp_benchmark_3d_compression_default_stream_eb_0_001.slurm  cuszp_benchmark_3d_compression_default_stream_eb_0_01.slurm  (+8 more)
compressor_evaluation/src/: CMakeLists.txt  cuszp_benchmark_3d_compression_default_stream.cpp  error_metrics.cu  error_metrics.h  mgard_benchmark_3d_compression_default_stream.cu  zfp_benchmark_3d_compression_default_stream.cpp  zfp_compression_multi_stream.h
performance_models_fitting/: README
performance_models_fitting/data/: no_compression_1_pairs_mpi.22632125.csv  no_compression_1_pairs_mpi.22632125.err  no_compression_1_pairs_mpi.22632125.out  no_compression_2_pairs_mpi.22632126.csv  no_compression_2_pairs_mpi.22632126.err  no_compression_2_pairs_mpi.22632126.out  no_compression_3_pairs_mpi.22632128.csv  no_compression_3_pairs_mpi.22632128.err  no_compression_3_pairs_mpi.22632128.out  no_compression_4_pairs_mpi.22632127.csv  no_compression_4_pairs_mpi.22632127.err  no_compression_4_pairs_mpi.22632127.out  submit_no_compression_1_pairs_mpi.slurm  submit_no_compression_2_pairs_mpi.slurm  submit_no_compression_3_pairs_mpi.slurm  submit_no_compression_4_pairs_mpi.slurm
performance_models_fitting/src/: CMakeLists.txt  no_compression_comm.cpp
(+416 files in other folders)
